build: updated maven to declare release version as 20, and to enable preview (virtual threads, etc..)